--- a/3_advanced/06_01_file_upload.html
+++ b/3_advanced/06_01_file_upload.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
     <body>
-        <form action="06_01_upload.php" method="post" enctype="multipart/form-data">
+        <form action="06_01_file_upload.php" method="post" enctype="multipart/form-data">
             Select image to upload:
             <input type="file" name="fileToUpload" id="fileToUpload">
             <input type="submit" value="Upload Image" name="submit">
